# spy-fork

./: pyproject.toml  ruff.toml  tox.ini
spy/: __main__.py  ast.py  ast_dump.py  cbuild.py  compiler.py  doppler.py  errors.py  fqn.py  llwasm.py  location.py  magic_py_parse.py  parser.py  textbuilder.py  util.py
spy/backend/: spy.py
spy/backend/c/: c_ast.py  context.py  cwriter.py  wrapper.py
spy/irgen/: modgen.py  scope.py  symtable.py
spy/libspy/: __init__.py
spy/vm/: astframe.py  bluecache.py  function.py  list.py  module.py  object.py  opimpl.py  registry.py  sig.py  str.py  tuple.py  typechecker.py  typeconverter.py  vm.py  w.py
spy/vm/modules/: builtins.py  jsffi.py  rawbuffer.py  types.py
src/spy/: __init__.py  __main__.py  ast.py  ast_dump.py  cbuild.py  compiler.py  doppler.py  errors.py  llwasm.py  location.py  textbuilder.py
src/spy/backend/: interp.py
src/spy/irgen/: scope.py  symtable.py
src/spy/vm/: astframe.py  b.py  list.py  (+13 more)
tests/: conftest.py  support.py  test___main__.py  test_backend_c.py  test_backend_spy.py  test_cbuild.py  test_doppler.py  test_fqn.py  test_libspy.py  test_llwasm.py  test_magic_py_parse.py  test_parser.py  test_scope.py  test_textbuilder.py  test_util.py  test_zz_mypy.py
tests/compiler/: test_00_bluemod.py  test_basic.py  test_debug.py  test_dynamic.py  test_float.py  test_jsffi.py  test_list.py  test_modules.py  test_operator.py  test_operator_attr.py  test_operator_call.py  test_rawbuffer.py  test_str.py  test_tuple.py  test_typedef.py
tests/vm/: test_function.py  test_module.py  test_sig.py  test_vm.py
(+20 files in other folders)
