[project]
name = "spy"
version = "0.1.0"
requires-python = ">=3.9"

dependencies = [
    "wasmtime==8.0.1",
    "fixedint==0.2.0",
    "typer==0.9.0",
    "untokenize==0.1.1",
    "ziglang==0.13.0",
]

[tool.pytest.ini_options]
markers = [
    "interp: mark tests executed with the 'interp' backend",
    "doppler: mark tests executed with the 'doppler' backend",
    "C: mark tests executed with the 'C' backend",
    "emscripten: mark tests executed via emscripten",
]

[tool.uv]
dev-dependencies = [
    "abilian-devtools>=0.6",
    "coverage>=7.6.2",
    "pytest>=8",
    "pyupgrade>=3.17.0",
    "tox-uv>=1.13.0",
    "tox>=4.21.2",
]

#[tool.hatch]
#build.targets.sdist.include = [
#    "/src",
#    "/tests",
#]

[build-system]
build-backend = "hatchling.build"
requires = [
    "hatchling>=1.25",
]
